# vkguide

./: CMakeLists.txt
.cache/clangd/index/: main.c.1C070D2E644159DC.idx  vk_engine.h.4BEF0901680CA1FE.idx  vk_types.h.02DDB21234028286.idx
include/: vk_engine.h
source/: main.c  vk_engine.c
